--- a/Character Level RNN.ipynb
+++ b/Character Level RNN.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -186,10 +186,10 @@
       "Variable containing:\n",
       "\n",
       "Columns 0 to 9 \n",
-      "-2.9268 -2.9361 -2.8609 -2.9766 -2.9476 -2.8867 -2.8031 -2.8718 -2.8816 -2.8843\n",
+      "-2.8463 -2.8522 -2.8140 -2.8626 -2.9689 -2.9459 -2.8350 -2.8607 -2.9405 -2.9855\n",
       "\n",
       "Columns 10 to 17 \n",
-      "-2.8931 -2.9018 -2.8474 -2.8288 -2.9488 -2.8977 -2.8700 -2.8800\n",
+      "-2.7856 -2.9796 -2.9782 -2.8993 -2.9472 -2.8014 -2.8676 -2.8928\n",
       "[torch.FloatTensor of size 1x18]\n",
       "\n"
      ]
@@ -205,14 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('German', 6)\n"
+      "('Japanese', 10)\n"
      ]
     }
    ],
@@ -227,23 +227,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('category =', 'Italian', '/ line =', u'Ongaro')\n",
-      "('category =', 'Chinese', '/ line =', u'Gui')\n",
-      "('category =', 'Chinese', '/ line =', u'Hew')\n",
-      "('category =', 'Polish', '/ line =', u'Lis')\n",
-      "('category =', 'French', '/ line =', u'David')\n",
-      "('category =', 'Spanish', '/ line =', u'Capello')\n",
-      "('category =', 'Chinese', '/ line =', u'Yep')\n",
-      "('category =', 'Polish', '/ line =', u'Kozlowski')\n",
-      "('category =', 'Irish', '/ line =', u\"O'Dowd\")\n",
-      "('category =', 'Czech', '/ line =', u'Cermak')\n"
+      "('category =', 'Korean', '/ line =', u'Li')\n",
+      "('category =', 'Czech', '/ line =', u'Neisser')\n",
+      "('category =', 'Greek', '/ line =', u'Close')\n",
+      "('category =', 'Czech', '/ line =', u'Weichert')\n",
+      "('category =', 'English', '/ line =', u'Rainey')\n",
+      "('category =', 'Greek', '/ line =', u'Paloumbas')\n",
+      "('category =', 'Chinese', '/ line =', u'Yim')\n",
+      "('category =', 'Chinese', '/ line =', u'Shum')\n",
+      "('category =', 'Japanese', '/ line =', u'Miyake')\n",
+      "('category =', 'Portuguese', '/ line =', u'Mendes')\n"
      ]
     }
    ],
@@ -274,33 +274,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0 % 2.8691 Boesch / Vietnamese F (German)\n",
-      "5000 5 % 2.8516 Walkenhorst / Korean F (German)\n",
-      "10000 10 % 2.9085 Weiss / Czech F (German)\n",
-      "15000 15 % 2.8624 Sasada / Czech F (Japanese)\n",
-      "20000 20 % 2.8395 Wang / Portuguese F (Korean)\n",
-      "25000 25 % 2.9668 Harb / Czech F (Arabic)\n",
-      "30000 30 % 2.9210 Pham / Korean F (Vietnamese)\n",
-      "35000 35 % 2.9607 Kaczka / German F (Polish)\n",
-      "40000 40 % 2.8153 Planick / Korean F (Czech)\n",
-      "45000 45 % 2.9037 De palma / Czech F (Italian)\n",
-      "50000 50 % 2.8714 O'Driscoll / Czech F (Irish)\n",
-      "55000 55 % 2.8770 Matsushita / Vietnamese F (Japanese)\n",
-      "60000 60 % 2.9291 Tsagunov / Czech F (Russian)\n",
-      "65000 65 % 2.9661 Gifford / Czech F (English)\n",
-      "70000 70 % 2.8438 Haanraats / Korean F (Dutch)\n",
-      "75000 75 % 2.9290 Penner / Czech F (Dutch)\n",
-      "80000 80 % 2.9257 Schoorel / Czech F (Dutch)\n",
-      "85000 85 % 2.9957 Gerges / Portuguese F (Arabic)\n",
-      "90000 90 % 2.9465 Montagna / German F (Italian)\n",
-      "95000 95 % 2.7899 Joubert / French T\n"
+      "0 0 % 2.8202 Antonopoulos / Polish F (Greek)\n",
+      "5000 5 % 2.6244 Opova / Japanese F (Czech)\n",
+      "10000 10 % 2.4098 Hutton / Scottish F (English)\n",
+      "15000 15 % 3.2197 Demall / Italian F (Czech)\n",
+      "20000 20 % 1.3741 Van / Chinese F (Vietnamese)\n",
+      "25000 25 % 2.8789 Earl / Arabic F (English)\n",
+      "30000 30 % 2.6241 Imai / Arabic F (Japanese)\n",
+      "35000 35 % 1.4009 Pinho / Portuguese T\n",
+      "40000 40 % 3.3792 Pellar / Scottish F (Czech)\n",
+      "45000 45 % 0.6365 Vihorev / Russian T\n",
+      "50000 50 % 2.6355 Santiago / Japanese F (Spanish)\n",
+      "55000 55 % 0.2445 Yao / Chinese T\n",
+      "60000 60 % 1.3827 Sinclair / French F (Scottish)\n",
+      "65000 65 % 0.4310 Yang / Korean T\n",
+      "70000 70 % 0.5866 Pelaez / Spanish T\n",
+      "75000 75 % 1.7908 Sai / Chinese F (Vietnamese)\n",
+      "80000 80 % 2.9340 Sorge / English F (German)\n",
+      "85000 85 % 1.2986 Castro / Portuguese F (Italian)\n",
+      "90000 90 % 1.8282 Daele / French F (Dutch)\n",
+      "95000 95 % 1.6626 Ma / Korean F (Vietnamese)\n"
      ]
     }
    ],
@@ -318,6 +318,7 @@
     "        output, hidden = rnn(line_tensor[i], hidden)\n",
     "    loss = criterion(output, category_tensor)\n",
     "    loss.backward()\n",
+    "    optimizer.step()\n",
     "    if epochs % 5000 == 0:\n",
     "        guess, guess_i = categoryFromOutput(output)\n",
     "        correct = 'T' if guess == category else 'F (%s)' % category\n",
